--- a/popup.html
+++ b/popup.html
@@ -247,7 +247,7 @@
 
 
   <script src="lib/bootstrap.bundle.min.js"></script>
-  <script src="popup.js"></script>
+  <script type="module" src="./js/main.js"></script>
 </body>
 
 </html>
