--- a/popup.html
+++ b/popup.html
@@ -7,7 +7,7 @@
   <title>PrevIA (v0.1.0)</title>
   <link rel="stylesheet" href="lib/bootstrap.min.css">
   <link href="popup.css" rel="stylesheet">
-  <link rel="icon" type="image/svg+xml" href="./icons/icon.svg">
+  <link rel="icon" type="image/svg+xml" href="./icons/icon128.png">
 </head>
 
 <body>
