--- a/popup.html
+++ b/popup.html
@@ -21,11 +21,11 @@
     <div class="d-flex align-items-center justify-content-between w-100">
       <div class="d-flex align-items-center gap-3">
         <div class="brand-icon">
-          <img src="./icons/icon.svg" alt="Lupa" width="22" height="22">
+          <img src="./icons/icon128.png" alt="Lupa" width="22" height="22">
         </div>
         <div>
           <div class="brand-title">PrevIA <span class="brand-version">(v0.1.0)</span></div>
-          <div class="brand-subtitle">Protege y analiza tus textos antes de compartirlos. 100 % privado, 100 % offline.
+          <div class="brand-subtitle">Protege y transforma tus textos: analiza, seudonimiza, generaliza o anonimiza de forma totalmente privada y offline.
           </div>
         </div>
       </div>
@@ -36,7 +36,7 @@
 
   <header class="container py-3 border-bottom">
     <p class="subtle mb-0">
-      Herramienta destinada a la preparación y anonimización de textos.
+      Herramienta destinada a la protección de textos.
     </p>
   </header>
 
